@@ -13,71 +13,61 @@ RUN mkdir -p /opt/sinkit && chown sinkit /opt/sinkit && chgrp sinkit /opt/sinkit
 WORKDIR /opt/sinkit
 USER sinkit
 
-ENV WILDFLY_VERSION 10.1.0.Final-SNAPSHOT
-ENV HIBERNATE_HQL_LUCENE_VERSION 1.3.0.Alpha2
-ENV HIBERNATE_HQL_PARSER_VERSION 1.3.0.Alpha2
-ENV STRINGTEMPLATE_VERSION 3.2.1
-ENV ANTLR_RUNTIME_VERSION 3.4
-ENV VERSION_INFINISPAN 8.2.2.Final
-ENV MAVEN_CENTRAL http://central.maven.org/maven2
-
-# ADD would run every rebuild
-#RUN wget http://download.jboss.org/wildfly/${WILDFLY_VERSION}/wildfly-${WILDFLY_VERSION}.zip && \
-
-# For the time being, we run with latest builds
-# wget https://github.com/wildfly/wildfly/archive/master.zip
-# unzip and build with ./build.sh -DskipTests :-)
-ADD wildfly-${WILDFLY_VERSION}.zip ./wildfly-${WILDFLY_VERSION}.zip
-RUN unzip wildfly-${WILDFLY_VERSION}.zip && rm -rf wildfly-${WILDFLY_VERSION}.zip
-
-# Infinispan query module
-ENV INFINISPAN_MODULE_DIR /opt/sinkit/wildfly-${WILDFLY_VERSION}/modules/system/layers/base/org/infinispan/query/main/
-RUN mkdir -p ${INFINISPAN_MODULE_DIR}
-ADD module.xml ${INFINISPAN_MODULE_DIR}/module.xml
-RUN sed -i "s/@HIBERNATE_HQL_LUCENE_VERSION@/${HIBERNATE_HQL_LUCENE_VERSION}/g" ${INFINISPAN_MODULE_DIR}/module.xml && \
-sed -i "s/@HIBERNATE_HQL_PARSER_VERSION@/${HIBERNATE_HQL_PARSER_VERSION}/g" ${INFINISPAN_MODULE_DIR}/module.xml && \
-sed -i "s/@STRINGTEMPLATE_VERSION@/${STRINGTEMPLATE_VERSION}/g" ${INFINISPAN_MODULE_DIR}/module.xml && \
-sed -i "s/@ANTLR_RUNTIME_VERSION@/${ANTLR_RUNTIME_VERSION}/g" ${INFINISPAN_MODULE_DIR}/module.xml && \
-sed -i "s/@VERSION_INFINISPAN@/${VERSION_INFINISPAN}/g" ${INFINISPAN_MODULE_DIR}/module.xml && \
-wget ${MAVEN_CENTRAL}/org/hibernate/hql/hibernate-hql-lucene/${HIBERNATE_HQL_LUCENE_VERSION}/hibernate-hql-lucene-${HIBERNATE_HQL_LUCENE_VERSION}.jar -O ${INFINISPAN_MODULE_DIR}/hibernate-hql-lucene-${HIBERNATE_HQL_LUCENE_VERSION}.jar && \
-wget ${MAVEN_CENTRAL}/org/hibernate/hql/hibernate-hql-parser/${HIBERNATE_HQL_PARSER_VERSION}/hibernate-hql-parser-${HIBERNATE_HQL_PARSER_VERSION}.jar -O ${INFINISPAN_MODULE_DIR}/hibernate-hql-parser-${HIBERNATE_HQL_PARSER_VERSION}.jar && \
-wget ${MAVEN_CENTRAL}/org/antlr/stringtemplate/${STRINGTEMPLATE_VERSION}/stringtemplate-${STRINGTEMPLATE_VERSION}.jar -O ${INFINISPAN_MODULE_DIR}/stringtemplate-${STRINGTEMPLATE_VERSION}.jar && \
-wget ${MAVEN_CENTRAL}/org/antlr/antlr-runtime/${ANTLR_RUNTIME_VERSION}/antlr-runtime-${ANTLR_RUNTIME_VERSION}.jar -O ${INFINISPAN_MODULE_DIR}/antlr-runtime-${ANTLR_RUNTIME_VERSION}.jar && \
-wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-directory-provider/${VERSION_INFINISPAN}/infinispan-directory-provider-${VERSION_INFINISPAN}.jar -O ${INFINISPAN_MODULE_DIR}/infinispan-directory-provider-${VERSION_INFINISPAN}.jar && \
-wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-lucene-directory/${VERSION_INFINISPAN}/infinispan-lucene-directory-${VERSION_INFINISPAN}.jar -O ${INFINISPAN_MODULE_DIR}/infinispan-lucene-directory-${VERSION_INFINISPAN}.jar && \
-wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-query-dsl/${VERSION_INFINISPAN}/infinispan-query-dsl-${VERSION_INFINISPAN}.jar -O ${INFINISPAN_MODULE_DIR}/infinispan-query-dsl-${VERSION_INFINISPAN}.jar && \
-wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-objectfilter/${VERSION_INFINISPAN}/infinispan-objectfilter-${VERSION_INFINISPAN}.jar -O ${INFINISPAN_MODULE_DIR}/infinispan-objectfilter-${VERSION_INFINISPAN}.jar && \
-wget ${MAVEN_CENTRAL}/org/infinispan/infinispan-query/${VERSION_INFINISPAN}/infinispan-query-${VERSION_INFINISPAN}.jar -O ${INFINISPAN_MODULE_DIR}/infinispan-query-${VERSION_INFINISPAN}.jar
-
-# Patched Infinispan - very dirty :-(
-# ADD infinispan-core-${VERSION_INFINISPAN}.jar /opt/sinkit/wildfly-${WILDFLY_VERSION}/modules/system/layers/base/org/infinispan/main/infinispan-core-${VERSION_INFINISPAN}.jar
-
-# Circle CI builds and tests the archive, so no need for additional checks here.
-ADD ear/target/sinkit-ear.ear /opt/sinkit/wildfly-${WILDFLY_VERSION}/standalone/deployments/
-
-# Workaround for https://github.com/docker/docker/issues/5509
-RUN ln -s /opt/sinkit/wildfly-${WILDFLY_VERSION} /opt/sinkit/wildfly
-
-# TODO: Fix remove garbage...
 EXPOSE 8080/tcp
-EXPOSE 46655/udp
-EXPOSE 7500/udp
+EXPOSE 8009/tcp
+EXPOSE 8443/tcp
+
+EXPOSE 4712-4713/tcp
+
+EXPOSE 57600/tcp
+EXPOSE 55200/tcp
+EXPOSE 54200/tcp
+EXPOSE 45700/tcp
+EXPOSE 45688/tcp
+
 EXPOSE 55200/udp
 EXPOSE 54200/udp
 EXPOSE 45688/udp
-EXPOSE 45700/udp
-EXPOSE 7800/udp
-EXPOSE 7800/tcp
-EXPOSE 7801/udp
-EXPOSE 7801/tcp
-EXPOSE 7600/udp
-EXPOSE 7600/tcp
-EXPOSE 7601/udp
-EXPOSE 7601/tcp
-EXPOSE 57600/udp
-EXPOSE 57600/tcp
 
+EXPOSE 7600-7620/tcp
+EXPOSE 7600-7620/udp
+
+ENV WILDFLY_VERSION 10.1.0.Final
+ENV INFINISPAN_VERSION 8.2.4.Final
 ENV WF_CONFIG /opt/sinkit/wildfly/standalone/configuration/standalone-ha.xml
+ENV MODORG modules/system/layers/base/org
+# ADD wildfly-${WILDFLY_VERSION}.zip ./wildfly-${WILDFLY_VERSION}.zip
+RUN \
+# Fetch Wildfly and Infinispan Server
+    wget http://download.jboss.org/wildfly/${WILDFLY_VERSION}/wildfly-${WILDFLY_VERSION}.zip && \
+    unzip wildfly-${WILDFLY_VERSION}.zip && rm -rf wildfly-${WILDFLY_VERSION}.zip && \
+    wget http://downloads.jboss.org/infinispan/${INFINISPAN_VERSION}/infinispan-server-${INFINISPAN_VERSION}-bin.zip && \
+    unzip infinispan-server-${INFINISPAN_VERSION}-bin.zip && rm -rf infinispan-server-${INFINISPAN_VERSION}-bin.zip && \
+# Infinispan query module (not present in Wildfly by default)
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/infinispan/query            /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/infinispan/ -v -R && \
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/hibernate/hql               /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/hibernate/ -v -R && \
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/antlr/antlr-runtime         /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/antlr/ -v -R && \
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/infinispan/objectfilter     /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/infinispan/ -v -R && \
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/infinispan/protostream      /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/infinispan/ -v -R && \
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/infinispan/hibernate-search /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/infinispan/ -v -R && \
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/infinispan/lucene-directory /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/infinispan/ -v -R && \
+# Infinispan query module dependencies loading workaround
+    sed -i 's/<module name="org.infinispan"\/>/<module name="org.infinispan"\/>\n        <module name="org.infinispan.commons"\/>/g' \
+        /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/infinispan/query/main/module.xml && \
+# Hibernate Search mayhem
+# Wildfly ignores compatiblity with Infinispan where Indexing is concerned
+    rm -v /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/hibernate/search/engine/main/hibernate-search-engine-*.jar && \
+    hibernatereplace=`cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/hibernate/search/engine/main/hibernate-search-engine-*.jar \
+        /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/hibernate/search/engine/main/ -v | \
+        sed 's/.*\(hibernate-search-engine-.*.jar\).*/\1/g'` && \
+    sed -i "s/hibernate-search-engine-.*.jar/$hibernatereplace/g" /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/hibernate/search/engine/main/module.xml && \
+# Lucene
+    rm -rf /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/apache/lucene && \
+    cp infinispan-server-${INFINISPAN_VERSION}/${MODORG}/apache/lucene /opt/sinkit/wildfly-${WILDFLY_VERSION}/${MODORG}/apache/ -v -R && \
+# Workaround for https://github.com/docker/docker/issues/5509
+    ln -s /opt/sinkit/wildfly-${WILDFLY_VERSION} /opt/sinkit/wildfly && \
+# Cleanup
+    rm -rf infinispan-server-${INFINISPAN_VERSION}
 
 ADD standalone-ha.xml ${WF_CONFIG}
 
@@ -85,10 +75,16 @@ RUN echo 'JAVA_OPTS="\
  -server \
  -Xms${SINKIT_MS_RAM:-6g} \
  -Xmx${SINKIT_MX_RAM:-6g} \
- -XX:+UseConcMarkSweepGC \
+ -XX:MetaspaceSize=128M \
+ -XX:MaxMetaspaceSize=512m \
+ -XX:+UseG1GC \
+ -XX:MaxGCPauseMillis=200 \
  -XX:+HeapDumpOnOutOfMemoryError \
  -XX:HeapDumpPath=/opt/sinkit \
 "' >> /opt/sinkit/wildfly/bin/standalone.conf
 RUN mkdir -p /opt/sinkit/wildfly/standalone/log/
 ADD sinkit.sh /opt/sinkit/
 CMD ["/opt/sinkit/sinkit.sh"]
+
+# Deployment
+ADD ear/target/sinkit-ear.ear /opt/sinkit/wildfly-${WILDFLY_VERSION}/standalone/deployments/
